<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.data.local.RegisterActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bt_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_account_type"
            android:layout_marginBottom="@dimen/text_size_15"
            android:textSize="@dimen/text_size_30"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bt_register_client"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_register_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_size_140"
            android:layout_marginTop="@dimen/text_size_10"
            android:layout_marginBottom="@dimen/text_size_50"
            android:text="@string/client"
            app:icon="@drawable/ic_baseline_person_24"
            app:iconPadding="@dimen/text_size_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_register_petshop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_size_140"
            android:layout_marginTop="@dimen/text_size_5"
            android:text="@string/petshop"
            app:icon="@drawable/ic_baseline_pets_24"
            app:iconPadding="@dimen/text_size_0"
            app:layout_constraintTop_toBottomOf="@id/bt_register_client" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>